add BigDecimals to aggregate algebra & fix averages